public/stylesheets/style.css
body {
    color:rgb(53, 22, 22);
    text-align: center;    
}

/* home.ejs page */
.picone {
    width: 100%; 
    height: auto;
    display: block;
    margin: 0 auto; 
    max-width: 900px; 
    border: 5px solid #ddd; 
    box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
    object-fit: cover; 
    background-color: black;
}
.home-main-container {
    background-color: rgb(146, 141, 61); 
}
.home-content-container {
    text-align:center;
}
.homebody {
    margin: 0;
    padding: 0;
    height: 100%;
}

#reading-title {
    text-decoration: underline;
    font-size: 40px;
    text-align: center;
    margin-top: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: rgb(53, 22, 22);
    text-align:center;
}


/* nav page */

.nav-container {
    background-color: #412e03;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100px; 
}

.nav-content {
    max-width: 960px;
    margin: 0 auto;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

nav a {
    color: #eae6ef;
    text-decoration: none;
    font-size: 18px;
}

nav a[href*="sign"] {
    background-color: #a77406; 
    color: #ffffff; 
    padding: 10px 20px;
    border-radius: 5px;
}

nav a[href*="sign"]:hover {
    background-color: #ddddca; 
}
/* sign-in ejs */
#sign-in-body {
    display:flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
    padding: 0;
    background-image: url("https://media.istockphoto.com/id/1295469942/photo/white-paper-on-brown-paper-background-with-copy-space-3d-illustration.webp?s=170667a&w=0&k=20&c=Jv3v3nkbl9KbPUTMXDZazjHqC5UH28P1ephd2kxQnGw=");
    background-size: cover;
}
.container-sign-in {
    width: 300px;
    height:300px;
    background-color:#654c14;
    border-radius: 10px;
    padding: 20px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;     
}

.input-group{
    margin-bottom: 20px;
    text-align: left;
    width: 100%;
}
.input-group label {
    margin-bottom: 5px;
}
.input-group input {
    width: 100%
}
#sign-in-form{
    background-color: #966e0f;
    padding: 20px;
    border-radius: 10px;
    display:flex;
    flex-direction: column;
    align-items: center;
}
#sign-in-button {
    width: 100px;
    padding: 10px;
    border: none;
    background-color: rgb(108, 87, 42);
    color: rgb(229, 225, 104);
    cursor: pointer;
    border-radius: 5px;
    margin-top:10px ;

}
/* sign up page */
#sign-up-body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
    padding: 0;
    background-image: url("https://media.istockphoto.com/id/1295469942/photo/white-paper-on-brown-paper-background-with-copy-space-3d-illustration.webp?s=170667a&w=0&k=20&c=Jv3v3nkbl9KbPUTMXDZazjHqC5UH28P1ephd2kxQnGw=");
    background-size: cover;
}

.container-sign-up {
    width: 300px;
    height: 300px;
    background-color: #654c14;
    border-radius: 10px;
    padding: 20px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.input-group-sign-up {
    margin-bottom: 20px;
    text-align: left;
    width: 100%;
}

.input-group-sign-up label {
    margin-bottom: 5px;
}

.input-group-sign-up input {
    width: calc(100% - 10px); 
}
#sign-up-form {
    background-color: #966e0f;
    padding: 20px;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#sign-up-button {
    width: 100px;
    padding: 10px;
    border: none;
    background-color: rgb(108, 87, 42);
    color: rgb(229, 225, 104);
    cursor: pointer;
    border-radius: 5px;
    margin-top: 10px;
}
.sign-up-page {
    font-size:24px;
    color: #261604;
    text-align: center;
    margin-bottom: 20px;
}










/* reader ejs. */
#readers-selection{
    background-image:url('https://images.unsplash.com/photo-1452421822248-d4c2b47f0c81?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8M3wzNTg0NzYzfHxlbnwwfHx8fHw%3D');
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
    position:relative;
}
.readers-container {
    max-width: 800px;
    margin: 0 auto;
    color:#612424;
    font-style: bold;

}
.readers-content {
    text-align: center;
    position:absolute;
    top: 50%;
    left:50%;
    transform:translate(-50%, -50%);
    width: 100%;
    box-sizing: border-box;
    padding: 20px;
    border-radius: 10px; 
    margin-top: 90px;
}
.books.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 20px;
}
.book {
    background-color: rgba(186, 154, 80, 0.5);
    padding:10px;
    border-radius: 5px;
    box-shadow: #966e0f;
}
.hello-reader highlight {
    font-size: 50px;
}
.readers-message highlight {
    font-size: 50px;
    font-style: bold;

}
.highlight {
    background-color: #928566;
    padding: 10px;
    border-radius: 5px;
}
/* new ejs */

#opening-pages-of-wonder {
    background-image: url('https://images.unsplash.com/photo-1509021436665-8f07dbf5bf1d?w=700&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjd8fGJvb2t8ZW58MHx8MHx8fDA%3D');
    background-size: cover;
    background-repeat: no-repeat;
}
.new-reader-container {
    max-width: 800px;
    margin: 0 auto;
    padding: 20px;
}
.new-reader-content {
    background-color: rgba(255, 255, 255, 0.8); 
    padding: 20px;
    border-radius: 10px;
}
.form-group {
    margin-bottom: 20px;
}
input[type="text"],
input[type="number"] {
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    box-sizing: border-box;
}
button[type="submit"],
a {
  display: inline-block;
  padding: 10px 20px;
  background-color: #947c62;
  color: #fff;
  text-decoration: none;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s;
}

button[type="submit"]:hover,
a:hover {
  background-color: #3e3105;
}
 
 






/* home.ejs page */

.main-containter {
    background-color: pink;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;  
    
 }  
 .content-container {
    color: rgb(219, 219, 226);
    display: flex;
    align-content: center;
    text-align: center;
 }

.nav-content {
    display:flex;
    justify-content: space-between;
    align-items: center;
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 20px;
}

nav a {
    text-decoration: none;
    color: rgb(210, 202, 234);
    margin: 0 10px;
    padding: 8px 12px;
    border-radius: 4 px;
    transition: background-color 0.3s;
    text-align: center;

}
nav a:hovver {
    background-color: #e2e6ea;
    color: rgb(68, 0, 255);
}
/* edit */

